--- a/src/config.properties
+++ b/src/config.properties
@@ -8,9 +8,23 @@ MYSQLJDBC.password = abc123
 browserstack.username = pnttester_IlE79u
 browserstack.key = iuxM4kyuhKq9ze73yEXw
 
-#saucedemo credentials
-username = standard_user
-password = secret_sauce
+#nopCommerce credentials
+nopfirst = Jack
+noplast = David
+nopemail = jackdavid10293@gmail.com
+noppw = 12345
+nopconpw = 12345
+
+#Demoblaze Credentials
+demo.user = John
+demo.pass = Kimbel
+
+#MagentoTest Credentials
+
+#XYZ Bank Credentials
+
+
+
 
 #wait time
 wait.time = 10
