--- a/src/config.properties
+++ b/src/config.properties
@@ -8,9 +8,22 @@ MYSQLJDBC.password = abc123
 browserstack.username = pnttester_IlE79u
 browserstack.key = iuxM4kyuhKq9ze73yEXw
 
+
+
 #saucedemo credentials
 username = standard_user
 password = secret_sauce
+
+#demoblaze credentials
+
+
+#Magento Credentials
+
+
+#NOPCommerce Credentials
+
+
+#XYZBank Credentials
 
 #wait time
 wait.time = 10
